remove profiling